img structure added size

--- a/languages/TipsAndTricks/sandbox/classes_gen/TipsAndTricks/sandbox/Enter.html.xml
+++ b/languages/TipsAndTricks/sandbox/classes_gen/TipsAndTricks/sandbox/Enter.html.xml
@@ -4,5 +4,14 @@
     <link rel="stylesheet" type:="text/css" href:="css/tips.css"></link>
   </head>
   
+  <p>
+      falnksnasg
+      "ENTER" this is cool
+      </p>
+  
+  <p class="image">
+    <img src="images/pic1.png" alt="" />
+  </p>
+   
   <body></body>
 </html>
