--- a/languages/TipsAndTricks/sandbox/classes_gen/TipsAndTricks/sandbox/tip2.html.xml
+++ b/languages/TipsAndTricks/sandbox/classes_gen/TipsAndTricks/sandbox/tip2.html.xml
@@ -5,12 +5,11 @@
   </head>
   
   <p>
-      falnksnasg
-      "ENTER" this is cool
+      
       </p>
   
   <p class="image">
-    <img src="images/pic1.png" alt="" />
+    <img src="images/donkey.png" alt="" />
   </p>
    
   <body></body>
