--- a/languages/TipsAndTricks/sandbox/source_gen/TipsAndTricks/sandbox/IdeTipsAndTricks.xml
+++ b/languages/TipsAndTricks/sandbox/source_gen/TipsAndTricks/sandbox/IdeTipsAndTricks.xml
@@ -2,5 +2,71 @@
   <extensions defaultExtensionNs="com.intellij">
     <tipAndTrick name="Tips.html"></tipAndTrick>
     <tipAndTrick name="tip2.html"></tipAndTrick>
+    <tipAndTrick name="Plugins.html"></tipAndTrick>
+    <tipAndTrick name="ProjectView.html"></tipAndTrick>
+    <tipAndTrick name="gotoModel.html"></tipAndTrick>
+    <tipAndTrick name="CommitCtrlK.html"></tipAndTrick>
+    <tipAndTrick name="GoToModule.html"></tipAndTrick>
+    <tipAndTrick name="ShowHierarchy.html"></tipAndTrick>
+    <tipAndTrick name="GoToDefinition.html"></tipAndTrick>
+    <tipAndTrick name="IntroduceField.html"></tipAndTrick>
+    <tipAndTrick name="Intentions.html"></tipAndTrick>
+    <tipAndTrick name="NavigateBack.html"></tipAndTrick>
+    <tipAndTrick name="ShowType.html"></tipAndTrick>
+    <tipAndTrick name="ParameterInfo.html"></tipAndTrick>
+    <tipAndTrick name="IntroduceVariable.html"></tipAndTrick>
+    <tipAndTrick name="ImportModel.html"></tipAndTrick>
+    <tipAndTrick name="SurroundWith.html"></tipAndTrick>
+    <tipAndTrick name="ShowStructure.html"></tipAndTrick>
+    <tipAndTrick name="ToolButtons.html"></tipAndTrick>
+    <tipAndTrick name="InsertEnter.html"></tipAndTrick>
+    <tipAndTrick name="Rename.html"></tipAndTrick>
+    <tipAndTrick name="ImportRoot.html"></tipAndTrick>
+    <tipAndTrick name="TabNavigation.html"></tipAndTrick>
+    <tipAndTrick name="NavigationWithTabs.html"></tipAndTrick>
+    <tipAndTrick name="Undo.html"></tipAndTrick>
+    <tipAndTrick name="HighlightUsagesInFile.html"></tipAndTrick>
+    <tipAndTrick name="Organization.html"></tipAndTrick>
+    <tipAndTrick name="HelpMenu.html"></tipAndTrick>
+    <tipAndTrick name="ExpressionSimplification.html"></tipAndTrick>
+    <tipAndTrick name="StyleClasses.html"></tipAndTrick>
+    <tipAndTrick name="ReflectiveEditor.html"></tipAndTrick>
+    <tipAndTrick name="CloseOthers.html"></tipAndTrick>
+    <tipAndTrick name="FindUsages.html"></tipAndTrick>
+    <tipAndTrick name="PasteHistory.html"></tipAndTrick>
+    <tipAndTrick name="OverrideBehaviorMethod.html"></tipAndTrick>
+    <tipAndTrick name="CompareTwoNodes.html"></tipAndTrick>
+    <tipAndTrick name="GoToAction.html"></tipAndTrick>
+    <tipAndTrick name="GoToClass.html"></tipAndTrick>
+    <tipAndTrick name="Inspector.html"></tipAndTrick>
+    <tipAndTrick name="ShowError.html"></tipAndTrick>
+    <tipAndTrick name="KindsOfModules.html"></tipAndTrick>
+    <tipAndTrick name="RecentFiles.html"></tipAndTrick>
+    <tipAndTrick name="GoToConcept.html"></tipAndTrick>
+    <tipAndTrick name="ProductivityGuide.html"></tipAndTrick>
+    <tipAndTrick name="BlockSelection.html"></tipAndTrick>
+    <tipAndTrick name="LeftTransform.html"></tipAndTrick>
+    <tipAndTrick name="CodeCompletion.html"></tipAndTrick>
+    <tipAndTrick name="Welcome.html"></tipAndTrick>
+    <tipAndTrick name="CommentOut.html"></tipAndTrick>
+    <tipAndTrick name="Console.html"></tipAndTrick>
+    <tipAndTrick name="DuplicateLine.html"></tipAndTrick>
+    <tipAndTrick name="MoveUpDown.html"></tipAndTrick>
+    <tipAndTrick name="Inline.html"></tipAndTrick>
+    <tipAndTrick name="VersionControlView.html"></tipAndTrick>
+    <tipAndTrick name="DeleteLine.html"></tipAndTrick>
+    <tipAndTrick name="GeneratorConfig.html"></tipAndTrick>
+    <tipAndTrick name="SWIntentions.html"></tipAndTrick>
+    <tipAndTrick name="IntroduceConstant.html"></tipAndTrick>
+    <tipAndTrick name="ImplementBehaviorMethod.html"></tipAndTrick>
+    <tipAndTrick name="ExtractMethod.html"></tipAndTrick>
+    <tipAndTrick name="NodeExplorer.html"></tipAndTrick>
+    <tipAndTrick name="GoToEditorDeclaration.html"></tipAndTrick>
+    <tipAndTrick name="Escape.html"></tipAndTrick>
+    <tipAndTrick name="GoToOverriden.html"></tipAndTrick>
+    <tipAndTrick name="HorizontalScrolling.html"></tipAndTrick>
+    <tipAndTrick name="JetBrainsTV.html"></tipAndTrick>
+    <tipAndTrick name="CamelHumps.html"></tipAndTrick>
+    <tipAndTrick name="GoToImplementation.html"></tipAndTrick>
   </extensions>
 </idea-plugin>
