--- a/languages/TipsAndTricks/sandbox/classes_gen/TipsAndTricks/sandbox/IdeTipsAndTricks.xml
+++ b/languages/TipsAndTricks/sandbox/classes_gen/TipsAndTricks/sandbox/IdeTipsAndTricks.xml
@@ -1,5 +1,6 @@
 <idea-plugin>
   <extensions defaultExtensionNs="com.intellij">
+    <tipAndTrick name="AXXXX.html"></tipAndTrick>
     <tipAndTrick name="Tips.html"></tipAndTrick>
     <tipAndTrick name="tip2.html"></tipAndTrick>
     <tipAndTrick name="Plugins.html"></tipAndTrick>
